--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "start": "bare relay-server.js",
         "web": "budo web/index.js:web/bundle.js --port 3000 --live --open --dir web",
-        "build": "browserify web/index.js > web/bundle.js && copy web\\index.html web\\dist\\index.html",
+        "build": "browserify web/index.js > web/bundle.js",
         "dev": "npm run build && npm run web",
         "reset": "rm -rf ./storage-*"
     },
@@ -24,6 +24,7 @@
         "hyperdht": "^6.20.1",
         "hyperswarm": "4.10.1",
         "protomux": "^3.10.1",
+        "readline": "^1.3.0",
         "sodium-javascript": "^0.8.0",
         "sodium-universal": "^4.0.1"
     },
