--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "DHT-Relay test for p2p communication",
     "scripts": {
         "start": "bare relay-server.js",
-        "web": "budo web/index.js:web/bundle.js --port 3000 --live --open --dir web",
+        "web": "budo web/index.js:web/bundle.js --live --open --dir web",
+        "bare": "bare peer.js",
         "build": "browserify web/index.js > web/bundle.js",
         "dev": "npm run build && npm run web",
         "reset": "rm -rf ./storage-*"
@@ -15,17 +16,12 @@
         "bare-fs": "^4.1.2",
         "bare-https": "^2.0.0",
         "bare-process": "^4.1.2",
-        "bare-stream": "^2.6.5",
         "bare-ws": "^2.0.1",
         "bip39-mnemonic": "2.2.0",
-        "compact-encoding": "^2.6.0",
-        "corestore": "^7.0.23",
         "hypercore-crypto": "^3.5.0",
         "hyperdht": "^6.20.1",
         "hyperswarm": "4.10.1",
         "protomux": "^3.10.1",
-        "readline": "^1.3.0",
-        "sodium-javascript": "^0.8.0",
         "sodium-universal": "^4.0.1"
     },
     "devDependencies": {
