--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "hyperswarm": "4.10.1",
         "protomux": "^3.10.1",
         "sodium-universal": "^4.0.1",
-        "sodium-javascript": "0.8.0"
+        "sodium-javascript": "0.8.0",
+        "ws": "^8.18.1"
     },
     "devDependencies": {
         "browserify": "^17.0.1",
